--- a/src/components/Preloader/style.module.scss
+++ b/src/components/Preloader/style.module.scss
@@ -13,7 +13,7 @@
         width: 100%;
         height: calc(100% + 300px);
         path{
-            fill: #141516;
+            fill: #0e0e0e;
         }
     }
     p{
