--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,19 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
+
+
+@keyframes float-around {
+  0%, 100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate(100px, -50px) rotate(90deg);
+  }
+  50% {
+    transform: translate(0, 100px) rotate(180deg);
+  }
+  75% {
+    transform: translate(-100px, 50px) rotate(270deg);
+  }
+}
