--- a/src/components/Preloader/style.module.scss
+++ b/src/components/Preloader/style.module.scss
@@ -35,5 +35,5 @@
 }
 
 .primaryColor {
-    color: #5046e6 !important; // Replace this with your primary color variable or value
+    color: #5046e6 !important; 
 }
